--- a/DrivingApp/res/values/strings.xml
+++ b/DrivingApp/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">DrivingApp</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="start_accel">Start Accelerometer</string>
+    <string name="title_activity_sensor">SensorActivity</string>
 
 </resources>
