Updates minimum target to Android 4.0 and added interface for the first page

--- a/DrivingApp/res/values/strings.xml
+++ b/DrivingApp/res/values/strings.xml
@@ -6,5 +6,12 @@
     <string name="hello_world">Hello world!</string>
     <string name="start_accel">Start Accelerometer</string>
     <string name="title_activity_sensor">SensorActivity</string>
+    <string name="app_status">App Status</string>
+    <string name="silenced">Silenced When Active</string>
+    <string name="change_pattern">Change Unlock Pattern</string>
+    <string name="disable_speed">Change Disable Speed</string>
+    <string name="disable_times">Change Disable Times</string>
+    <string name="help">Help</string>
+    <string name="about">About</string>
 
 </resources>
