--- a/DrivingApp/res/values/strings.xml
+++ b/DrivingApp/res/values/strings.xml
@@ -18,7 +18,9 @@
     <string name="title_activity_speed_adjust">SpeedAdjustActivity</string>
     <string name="OK">OK</string>
     <string name="unlock">Unlock</string>
+
     <color name="mycolor1">#F5DC49</color>
+
     <string name="title_activity_about">AboutActivity</string>
     <string name="title_activity_help">HelpActivity</string>
     <string name="appStats">My Stats</string>
@@ -26,7 +28,8 @@
     <string name="title_activity_options">OptionsActivity</string>
     <string name="title_activity_stats">StatsActivity</string>
     <string name="title_activity_set_apps">SetAppsActivity</string>
-	<string name="setApps">Set Apps</string>
-	<string name="options">Options</string>
-	
+    <string name="setApps">Set Apps</string>
+    <string name="options">Options</string>
+    <string name="title_activity_volume_check_service">VolumeCheckService</string>
+
 </resources>
