--- a/DrivingApp/res/values/strings.xml
+++ b/DrivingApp/res/values/strings.xml
@@ -18,6 +18,14 @@
     <string name="title_activity_speed_adjust">SpeedAdjustActivity</string>
 	<string name="OK">OK</string>
 	<string name="unloack">Unlock</string>
-	<color name="mycolor1">#F5DC49</color>
+	<string name="exit_screen">Exit</string>
+	<string name="phone">Phone</string>
+	<string name="pandora">Pandora</string>
+	<string name="music">Music</string>
+	<string name="maps">Maps</string>
+	<string name="shazam">Shazam</string>
+	<string name="first_app_name_launcher">Pandora</string>
+		
+	<color name="mycolor1">#585858 </color>
     
 </resources>
