--- a/DrivingApp/res/values/strings.xml
+++ b/DrivingApp/res/values/strings.xml
@@ -18,13 +18,19 @@
     <string name="title_activity_speed_adjust">SpeedAdjustActivity</string>
     <string name="OK">OK</string>
     <string name="unlock">Unlock</string>
-
-    <color name="mycolor1">#F5DC49</color>
-
+	<string name="exit_screen">Exit</string>
+	<string name="phone">Phone</string>
+	<string name="pandora">Pandora</string>
 	<string name="music">Music</string>
 	<string name="maps">Maps</string>
 	<string name="shazam">Shazam</string>
 	<string name="first_app_name_launcher">Pandora</string>
+		
+	<color name="mycolor1">#585858 </color>
+	    <string name="title_activity_about">AboutActivity</string>
+    <string name="title_activity_help">HelpActivity</string>
+    <string name="appStats">My Stats</string>
+    <string name="launch">Launch</string>
     <string name="title_activity_options">OptionsActivity</string>
     <string name="title_activity_stats">StatsActivity</string>
     <string name="title_activity_set_apps">SetAppsActivity</string>
