fix merge conflicts

--- a/DrivingApp/res/values/strings.xml
+++ b/DrivingApp/res/values/strings.xml
@@ -25,6 +25,14 @@
 	<string name="maps">Maps</string>
 	<string name="shazam">Shazam</string>
 	<string name="first_app_name_launcher">Pandora</string>
+	<string name="amazonMp3">Amazon Mp3</string>
+	<string name="googlePlayMusic">Google Play Music</string>
+	<string name="spotify">Spotify</string>
+	<string name="categoryMusic">Music</string>
+	<string name="categoryNavigation">Navigation</string>
+	<string name="categoryPhone">Phone</string>
+	<string name="chooseCategory">Choose a Category</string>
+	<string name="chooseMusicApp">Choose a Music App</string>
 		
 	<color name="mycolor1">#585858 </color>
 	    <string name="title_activity_about">AboutActivity</string>
